[REFACTOR] making some changes to the visibility modifier and refactoring some inefficient test